# ha-dashboard-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  makejinja.toml  pyproject.toml  release-please-config.json  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: release-please.yml
queries/: get_lights.jinja
scripts/: fetch_ha_data.py
templates/: dashboard.yaml.jinja
